--- a/WebContent/VAADIN/themes/pubmedsearchengine/styles.scss
+++ b/WebContent/VAADIN/themes/pubmedsearchengine/styles.scss
@@ -7,3 +7,10 @@
   @include addons;
   @include pubmedsearchengine;
 }
+
+.title {
+	color: white;
+	background: blue;
+	vertical-align: text-middle;
+}
+
